add support for streaming APIs in node client
Signed-off-by: Rishabh Maurya <rishabhmaurya05@gmail.com>